<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="245dp"
        android:layout_height="147dp"
        android:contentDescription="@string/altFoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCelular"
        app:layout_constraintVertical_bias="0.222"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtApellidos"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtDireccion"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtDocumento"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtDocumento"
        android:inputType="number"
        android:maxLength="8"
        app:layout_constraintStart_toStartOf="@+id/txtDireccion"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <Button
        android:id="@+id/btnCamara"
        android:layout_width="55dp"
        android:layout_height="51dp"
        android:drawableStart="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toEndOf="@+id/ivFoto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtDireccion"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtCelular"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtNombres"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtApellido"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDireccion"
        android:layout_width="55dp"
        android:layout_height="51dp"
        android:layout_marginEnd="40dp"
        android:drawableStart="@android:drawable/ic_menu_myplaces"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtDireccion"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/txtCelular"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="180dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtCelular"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="187dp"
        android:layout_height="64dp"
        android:text="@string/btnGuardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTitulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>